--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express": "^5.1.0",
     "node-pty": "^1.0.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
