--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "@xterm/xterm": "^5.5.0",
+    "ace-builds": "^1.43.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^3.0.6",
     "socket.io-client": "^4.8.1",
