--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "author": "Shivam Raj",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^4.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "node-pty": "^1.0.0",
     "socket.io": "^4.8.1"
