--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-ace": "^14.0.1",
+    "react-arborist": "^3.4.3",
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^3.0.6",
     "socket.io-client": "^4.8.1",
